// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders button with icon 1`] = `
<div>
  <button
    class="sc-bdvvtL jVCSJw"
  >
    <span
      class="material-icons sc-gsDKAQ jUyrhl"
    >
      crop_original
    </span>
    Continue
  </button>
</div>
`;

exports[`Button renders button without icon 1`] = `
<div>
  <button
    class="sc-bdvvtL jVCSJw"
  >
    Continue
  </button>
</div>
`;

exports[`Button renders contained button with icon 1`] = `
<div>
  <button
    class="sc-bdvvtL dRBcfm"
  >
    <span
      class="material-icons sc-gsDKAQ jUyrhl"
    >
      crop_original
    </span>
    New board
  </button>
</div>
`;

exports[`Button renders contained button without icon 1`] = `
<div>
  <button
    class="sc-bdvvtL dRBcfm"
  >
    New board
  </button>
</div>
`;

exports[`Button renders contained disabled button with icon 1`] = `
<div>
  <button
    class="sc-bdvvtL dRBcfm"
    disabled=""
  >
    <span
      class="material-icons sc-gsDKAQ jUyrhl"
    >
      crop_original
    </span>
    New board
  </button>
</div>
`;

exports[`Button renders contained disabled button without icon 1`] = `
<div>
  <button
    class="sc-bdvvtL dRBcfm"
    disabled=""
  >
    New board
  </button>
</div>
`;

exports[`Button renders disabled button with icon 1`] = `
<div>
  <button
    class="sc-bdvvtL jVCSJw"
    disabled=""
  >
    <span
      class="material-icons sc-gsDKAQ jUyrhl"
    >
      crop_original
    </span>
    Continue
  </button>
</div>
`;

exports[`Button renders disabled button without icon 1`] = `
<div>
  <button
    class="sc-bdvvtL jVCSJw"
    disabled=""
  >
    Continue
  </button>
</div>
`;
